[metadata]
name = brain_pycore
author = Andrei Gramakov
author_email = mail@agramakov.me
version = file: VERSION
url = https://github.com/an-dr/brain_pycore
description = Python package used by the Zakhar project (github.com/Zakhar-the-Robot). The package contains addresses of devices, command codes, hardware interfaces, etc.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = robot, zakhar, robotics
license = MIT
license-file = LICENSE
requires-dist = setuptools
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Framework :: Robot Framework :: Library

[options]
zip_safe = False
include_package_data = True
package_dir = src
packages = find:
install_requires =
    python-can >= 3.3.4

[options.extras_require]
dev = setupext-janitor

[options.packages.find]
where = src

[flake8]
max-line-length = 120
max-complexity = 10
ignore = F405
per-file-ignores =
    */__init__.py:F401,F403
exclude =
    .git
    __pycache__
    docs/source/conf.py
    build
    dist
