[metadata]
name = brain_pycore
author = Andrei Gramakov
author_email = mail@agramakov.me
version = attr: brain_pycore.__version__
url = https://github.com/Zakhar-the-Robot/brain_pycore
description = Python package used by the Zakhar project (github.com/Zakhar-the-Robot). The package contains addresses of devices, command codes, hardware interfaces, etc.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = robot, zakhar, robotics
license = MIT
license_file = LICENSE
requires_dist = setuptools
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Framework :: Robot Framework :: Library

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    python-can >= 4.0.0
    roslibpy
    pyzmq

[options.package_data]
* = README.md
    
[options.extras_require]
dev = 
    setupext-janitor
    black
    
[options.packages.find]
where = src
